tests/grammar/schema/index_signature/fail_4/stderr.golden
error[E1001]: IndexSignatureError
 --> ${CWD}/main.k:2:5
  |
2 |     count: int
  |     ^ the type 'int' of schema attribute 'count' does not meet the index signature definition [str]: str
  |